--- a/public/css/frame.css
+++ b/public/css/frame.css
@@ -14,8 +14,7 @@
 }
 .main-main
 {
-    /* width:500px;
-    height:700px;
-    text-align:center;
-    font-size:40px; */
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
 }
