--- a/public/css/frame.css
+++ b/public/css/frame.css
@@ -3,7 +3,7 @@
 
     display:flex;
     flex-direction:column;
-    justify-content:center;
+    justify-content:flex-start;
     height:90vh;
 }
 .main-row
