--- a/public/css/walletAddress.css
+++ b/public/css/walletAddress.css
@@ -4,3 +4,15 @@
     display:block;
     margin-bottom:10%;
 }
+.main-main
+{
+    flex-direction:row;
+}
+
+.column-1,.column-2
+{
+    display:flex;
+    flex-direction: column;
+    margin-right:10%;
+    margin-left:10%;
+}
