--- a/public/css/newDesign.css
+++ b/public/css/newDesign.css
@@ -1,4 +1,4 @@
-#wallet-information-button-container
+#wallet-information-button-container-desktop
 {
     padding-left: 20%;
     padding-right: 20%;
@@ -23,9 +23,30 @@
 {
     margin-top:80px;
 }
+.wallet-information-text-3
+{
+    margin-top:80px;
+    margin-bottom:20px;
+}
+.wallet-information-text-2
+{
+    /* margin-top:80px; */
+    /* text-align: right; */
+    display: inline-block;
+}
 .button-extra
 {
     width:175px;
+    height:auto;
+}
+.button-extra-2
+{
+    width:250px;
+    height:auto;
+}
+.button-extra-5
+{
+    width:250px;
     height:auto;
 }
 .wallet-icon
@@ -34,9 +55,107 @@
     width: 30px;
     border-radius: 30px;
 }
+.wallet-detect-icon
+{
+    height: 30px;
+    width: 30px;
+    filter: invert(1);
+}
 .wallet-text
 {
     font-size:20px;
     font-weight:100;
     padding-left: 10px;
+}
+#wallet-walletConnect-buttonList-container
+{
+    z-index: 99;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    inset: 0px;
+    display: none;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+#wallet-walletConnect-buttonList-background
+{
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0px;
+    background: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+#wallet-qr-container
+{
+    display:none;
+    /* height:500px; */
+    z-index: 2;
+    width: 45%;
+    padding: 6%;
+    background: white;
+    text-align: center;
+}
+#wallet-walletConnect-buttonList
+{
+    z-index: 2;
+    max-width: 100%;
+    max-height: calc(100vh - 2rem);
+    overflow: scroll;
+    border-radius: 1.5rem;
+    box-shadow: rgb(0 0 0 / 20%) 0px 0.375rem 1.5rem 0px;
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    width: 20.125rem;
+}
+
+.wallet-walletConnect-buttonList-helper-1
+{
+    display: flex;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: stretch;
+    align-items: stretch;
+    padding: 0px;
+}
+.wallet-walletConnect-buttonList-helper-2
+{
+    padding: 3rem 3rem 1.875rem;
+}
+.button-extra-3
+{
+    width:175px;
+    height:auto;
+    margin-top:1rem;
+    margin-bottom:1rem;
+}
+.button-extra-4
+{
+    width:175px;
+    height:auto;
+    margin-top:1rem;
+}
+.wallet-mobile-icon
+{
+    height: 30px;
+    width: 30px;
+    border-radius: 30px;
+}
+.wallet-wait
+{
+    height:30px;
+}
+.wallet-walletConnect-text-1
+{
+    margin-top:-1rem;
+    margin-bottom:1rem;
+}
+.wallet-walletConnect-text-2
+{
+    font-size:11px;
 }
