--- a/public/css/newDesign.css
+++ b/public/css/newDesign.css
@@ -67,6 +67,43 @@
     font-weight:100;
     padding-left: 10px;
 }
+
+#wallet-alert-container
+{
+    z-index: 99;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    inset: 0px;
+    display: none;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+#wallet-alert-background
+{
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0px;
+    background: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+#wallet-alert-text
+{
+    z-index: 2;
+    max-width: 100%;
+    max-height: calc(100vh - 2rem);
+    box-shadow: rgb(0 0 0 / 20%) 0px 0.375rem 1.5rem 0px;
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    width: 20.125rem;
+    padding: 67px;
+    font-size: 20px;
+}
+
 #wallet-walletConnect-buttonList-container
 {
     z-index: 99;
@@ -158,4 +195,117 @@
 .wallet-walletConnect-text-2
 {
     font-size:11px;
+}
+/*--------------*/
+#wallet-information-button-container-desktop
+{
+    display:block;
+}
+#wallet-information-button-container-mobile
+{
+     display:none;
+}
+
+/* ------------------------ */
+/* ---   SP SPECIFIC   ---- */
+/* ------------------------ */
+
+/* ------------------------ */
+/*         PORTRAIT         */
+/* ------------------------ */
+/* ------------------------ */
+/*   GENERAL MOBILE PHONES  */
+/* ------------------------ */
+/* ------------------------ */
+/*---- PORTRAIT ----*/
+@media only screen
+and (max-device-width: 428px)
+and (max-device-height: 926px)
+{
+    #wallet-information-button-container-desktop
+    {
+        display:none;
+    }
+    #wallet-information-button-container-mobile
+    {
+        display: flex;
+        margin-top: 2vh;
+        margin-bottom: 2vh;
+        flex-direction: column;
+    }
+
+
+    .wallet-information-text-mobile
+    {
+        text-align: center;
+    }
+    #wallet-walletConnect-button-container-mobile
+    {
+        display: flex;
+        justify-content: center;
+    }
+    .button-extra-mobile
+    {
+
+    }
+    .wallet-icon-mobile
+    {
+        height: 50px;
+        border-radius:50px;
+    }
+    .wallet-text-mobile
+    {
+
+    }
+
+}
+/* ------------------------ */
+/* ------------------------ */
+/*         LANDSCAPE        */
+/* ------------------------ */
+/* ------------------------ */
+/*   GENERAL MOBILE PHONES  */
+/* ------------------------ */
+/* ------------------------ */
+/*---- LANDSCAPE ----*/
+@media only screen
+and (max-device-width: 926px)
+AND (max-device-height: 428px)
+{
+
+    #wallet-information-button-container-desktop
+    {
+        display:none;
+    }
+    #wallet-information-button-container-mobile
+    {
+        display:block;
+        margin-top: 2vh;
+        margin-bottom: 2vh;
+    }
+
+
+    .wallet-information-text-mobile
+    {
+
+    }
+    #wallet-walletConnect-button-container-mobile
+    {
+        display: flex;
+        justify-content: center;
+    }
+    .button-extra-mobile
+    {
+
+    }
+    .wallet-icon-mobile
+    {
+        height: 50px;
+    }
+    .wallet-text-mobile
+    {
+
+    }
+
+
 }
