--- a/public/css/newDesign.css
+++ b/public/css/newDesign.css
@@ -218,7 +218,17 @@
 {
     height:20px;
     cursor:pointer;
+    transition:0.05s;
 }
+.table-delete-general-icon-class:hover
+{
+    filter: drop-shadow(0px 0px 0px red);
+}
+/* .table-delete-general-icon-class:active
+{
+    filter: drop-shadow(0px 0px 0px red);
+} */
+
 
 /*--------------*/
 #wallet-information-button-container-desktop
